--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ function calculate() {
   document.getElementById("interest").innerText = formatCurrency(interest.toFixed(2));
 }
 </script>
-
+<h3 style='align:center;'>All rights Reserved.Powered by AYUA KUMA SIMON-2026</h3>
 </body>
 </html>
+
