--- a/index.html
+++ b/index.html
@@ -188,7 +188,10 @@ function calculate() {
   document.getElementById("interest").innerText = formatCurrency(interest.toFixed(2));
 }
 </script>
-<h3 style='align:center;'>All rights Reserved.Powered by AYUA KUMA SIMON-2026</h3>
+<footer style="text-align: center; padding: 10px; font-size: 14px; color: #555;">
+    &copy; 2026 All rights reserved. Powered by <strong>Ayua Kuma Simon</strong>.
+</footer>
 </body>
 </html>
+
 
